--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@mui/base": "^5.0.0-beta.68",
     "@mui/icons-material": "^6.3.1",
     "@mui/material": "^6.3.1",
+    "@tanstack/react-query": "^5.66.9",
+    "@tanstack/react-query-devtools": "^5.66.9",
+    "axios": "^1.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
