--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tanstack/react-query-devtools": "^5.66.9",
     "axios": "^1.8.1",
     "react": "^18.3.1",
+    "react-datepicker": "^8.1.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
     "styled-components": "^6.1.15"
