--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "prettier": "^3.5.1",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
-    "vite": "^6.0.5"
+    "vite": "^6.0.5",
+    "homepage": "/admin"
   }
 }
