--- a/package.json
+++ b/package.json
@@ -39,6 +39,6 @@
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
     "vite": "^6.0.5",
-    "homepage": "/admin"
+    "homepage": "/admin/"
   }
 }
